# oneAPI-samples

DirectProgramming/C++SYCL_FPGA/: README.md
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/matmul/src/: CMakeLists.txt  memory_transfers.hpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/ac_fixed/: CMakeLists.txt
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/ac_fixed/src/: CMakeLists.txt
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/experimental/invocation_interfaces/src/: register_map_functor_model.cpp  streaming_functor_model.cpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/experimental/pipelined_kernels/src/: pipelined_kernels.cpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/hls_flow_interfaces/component_interfaces_comparison/mm-host/src/: vector_add.cpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/hls_flow_interfaces/mmhost/: README.md
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/hls_flow_interfaces/mmhost/part3_hosts/src/: mmhost.cpp
DirectProgramming/C++SYCL_FPGA/include/: annotated_class_util.hpp
DirectProgramming/DPC++FPGA/Tutorials/Features/ac_fixed/: README.md
DirectProgramming/DPC++FPGA/Tutorials/Features/ac_int/: README.md
DirectProgramming/DPC++FPGA/Tutorials/Features/ac_types/ap_float/: CMakeLists.txt
DirectProgramming/DPC++FPGA/Tutorials/Features/ac_types/ap_float/src/: ap_float.cpp
DirectProgramming/DPC++FPGA/Tutorials/Features/ap_float/: README.md  ap_float.sln  ap_float.vcxproj  sample.json
DirectProgramming/DPC++FPGA/Tutorials/Features/ap_float/src/: CMakeLists.txt  ap_float.cpp  util.hpp
(+1 files in other folders)
